examples/test/testpolicy16303.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy16303
  namespace: namespace348
spec:
  podSelector:
    matchLabels:
      key41: value26
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key34: value25
      podSelector:
        matchLabels:
          key4: value27
          key9: value39
          key5: value16
